--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             border: 1px solid black;
         }
         name {
+            padding: 5px;
             height:20px
         }
     </style>
