--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 <body>
     <h1>Image Processing</h1>
     <input type="file" id="upload" accept="image/*" multiple>
-    <button id="apply">Apply Processing</button>
+    <button id="download">Download All Processed Images</button>
     <div class="canvas-container" id="canvasContainer"></div>
     <name>made by inla_</name>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.7.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
+    
     <script>
         let images = [];
 
@@ -68,20 +71,11 @@
                         canvas.height = img.height;
                         ctx.drawImage(img, 0, 0);
 
-                        const saveButton = document.createElement('button');
-                        saveButton.textContent = 'Save Image';
-                        saveButton.addEventListener('click', function() {
-                            const link = document.createElement('a');
-                            link.download = 'processed_image.png';
-                            link.href = canvas.toDataURL();
-                            link.click();
-                        });
-
                         canvasWrapper.appendChild(canvas);
-                        canvasWrapper.appendChild(saveButton);
                         canvasContainer.appendChild(canvasWrapper);
 
                         images.push({ img, canvas, ctx });
+                        processImage({ canvas, ctx });
                     };
                     img.src = e.target.result;
                 };
@@ -89,31 +83,42 @@
             });
         });
 
-        document.getElementById('apply').addEventListener('click', function() {
-            images.forEach(({ canvas, ctx }) => {
-                const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-                const data = imageData.data;
+        function processImage({ canvas, ctx }) {
+            const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+            const data = imageData.data;
 
-                const getPixel = (x, y, i) => {
-                    const index = (y * canvas.width + x) * 4 + i;
-                    return data[index];
-                };
+            const getPixel = (x, y, i) => {
+                const index = (y * canvas.width + x) * 4 + i;
+                return data[index];
+            };
 
-                for (let y = 1; y < canvas.height - 1; y++) {
-                    for (let x = 1; x < canvas.width - 1; x++) {
-                        for (let i = 0; i < 3; i++) {
-                            const avg = (
-                                getPixel(x - 1, y - 1, i) + getPixel(x, y - 1, i) + getPixel(x + 1, y - 1, i) +
-                                getPixel(x - 1, y, i) + getPixel(x, y, i) + getPixel(x + 1, y, i) +
-                                getPixel(x - 1, y + 1, i) + getPixel(x, y + 1, i) + getPixel(x + 1, y + 1, i)
-                            ) / 9;
+            for (let y = 1; y < canvas.height - 1; y++) {
+                for (let x = 1; x < canvas.width - 1; x++) {
+                    for (let i = 0; i < 3; i++) {
+                        const avg = (
+                            getPixel(x - 1, y - 1, i) + getPixel(x, y - 1, i) + getPixel(x + 1, y - 1, i) +
+                            getPixel(x - 1, y, i) + getPixel(x, y, i) + getPixel(x + 1, y, i) +
+                            getPixel(x - 1, y + 1, i) + getPixel(x, y + 1, i) + getPixel(x + 1, y + 1, i)
+                        ) / 9;
 
-                            data[(y * canvas.width + x) * 4 + i] = avg;
-                        }
+                        data[(y * canvas.width + x) * 4 + i] = avg;
                     }
                 }
+            }
 
-                ctx.putImageData(imageData, 0, 0);
+            ctx.putImageData(imageData, 0, 0);
+        }
+
+        document.getElementById('download').addEventListener('click', function() {
+            const zip = new JSZip();
+
+            images.forEach(({ canvas }, index) => {
+                const dataUrl = canvas.toDataURL().split(',')[1];
+                zip.file(`processed_image_${index + 1}.png`, dataUrl, { base64: true });
+            });
+
+            zip.generateAsync({ type: 'blob' }).then(function(content) {
+                saveAs(content, 'processed_images.zip');
             });
         });
     </script>
