--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <body>
     <h1>Image Processing</h1>
     <input type="file" id="upload" accept="image/*" multiple>
+    <label><input type="checkbox" id="noiseRemoval"> Remove Noise</label>
+    <button id="apply">Apply Processing</button>
     <button id="download">Download All Processed Images</button>
     <div class="canvas-container" id="canvasContainer"></div>
     <name>made by inla_</name>
@@ -74,8 +76,10 @@
                         canvasWrapper.appendChild(canvas);
                         canvasContainer.appendChild(canvasWrapper);
 
-                        images.push({ img, canvas, ctx });
-                        processImage({ canvas, ctx });
+                        images.push({ img, canvas, ctx, name: file.name });
+                        if (document.getElementById('noiseRemoval').checked) {
+                            removeNoise({ canvas, ctx });
+                        }
                     };
                     img.src = e.target.result;
                 };
@@ -83,7 +87,7 @@
             });
         });
 
-        function processImage({ canvas, ctx }) {
+        function removeNoise({ canvas, ctx }) {
             const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
 
@@ -109,12 +113,20 @@
             ctx.putImageData(imageData, 0, 0);
         }
 
+        document.getElementById('apply').addEventListener('click', function() {
+            images.forEach(({ canvas, ctx }) => {
+                if (document.getElementById('noiseRemoval').checked) {
+                    removeNoise({ canvas, ctx });
+                }
+            });
+        });
+
         document.getElementById('download').addEventListener('click', function() {
             const zip = new JSZip();
 
-            images.forEach(({ canvas }, index) => {
+            images.forEach(({ canvas, name }) => {
                 const dataUrl = canvas.toDataURL().split(',')[1];
-                zip.file(`processed_image_${index + 1}.png`, dataUrl, { base64: true });
+                zip.file(name, dataUrl, { base64: true });
             });
 
             zip.generateAsync({ type: 'blob' }).then(function(content) {
