--- a/index.html
+++ b/index.html
@@ -14,13 +14,22 @@
             height: 100vh;
             margin: 0;
         }
-        input[type="file"], button {
+        input[type="file"] {
             margin: 20px;
+            position: relative;
+            z-index: 1;
+        }
+        button {
+            margin: 20px;
+            position: relative;
+            z-index: 1;
         }
         .canvas-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            position: relative;
+            z-index: 0;
         }
         .canvas-wrapper {
             display: flex;
@@ -35,6 +44,8 @@
         name {
             padding: 5px;
             height: 20px;
+            position: relative;
+            z-index: 1;
         }
     </style>
 </head>
@@ -42,7 +53,6 @@
     <h1>Image Processing</h1>
     <input type="file" id="upload" accept="image/*" multiple>
     <label><input type="checkbox" id="noiseRemoval"> Remove Noise</label>
-    <button id="apply">Apply Processing</button>
     <button id="download">Download All Processed Images</button>
     <div class="canvas-container" id="canvasContainer"></div>
     <name>made by inla_</name>
@@ -77,10 +87,10 @@
                         canvasContainer.appendChild(canvasWrapper);
 
                         images.push({ img, canvas, ctx, name: file.name });
+
                         if (document.getElementById('noiseRemoval').checked) {
                             removeNoise({ canvas, ctx });
                         }
-                        scrollToTop();
                     };
                     img.src = e.target.result;
                 };
@@ -114,10 +124,17 @@
             ctx.putImageData(imageData, 0, 0);
         }
 
-        document.getElementById('apply').addEventListener('click', function() {
+        document.getElementById('noiseRemoval').addEventListener('change', function() {
             images.forEach(({ canvas, ctx }) => {
                 if (document.getElementById('noiseRemoval').checked) {
                     removeNoise({ canvas, ctx });
+                } else {
+                    const imgData = canvas.toDataURL();
+                    const img = new Image();
+                    img.onload = function() {
+                        ctx.drawImage(img, 0, 0);
+                    };
+                    img.src = imgData;
                 }
             });
         });
@@ -134,10 +151,6 @@
                 saveAs(content, 'processed_images.zip');
             });
         });
-
-        function scrollToTop() {
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
     </script>
 </body>
 </html>
