--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="canvas-container" id="canvasContainer"></div>
-    <h1>Image Processing</h1>
+    <h1>이미지 노이즈 제거 및 부드럽게 만들기~!ヾ(•ω•`)o</h1>
     <input type="file" id="upload" accept="image/*" multiple>
     <label><input type="checkbox" id="noiseRemoval"> Remove Noise</label>
     <label><input type="checkbox" id="smooth"> Smooth Image</label>
